updated my list of hobbies nothing much

--- a/hobbies.html
+++ b/hobbies.html
@@ -8,7 +8,7 @@
     <h3>Hobbies</h3>
     <ol>
         <li>Sleeping</li>
-        <li><a href="https://www.facebook.com/valianthau/photos/a.131563235040689/273487890848222/">Esports</a></li>
+        <li><a href="https://www.facebook.com/valianthau/photos/a.131563235040689/273487890848222/">Esports (past hobby)</a></li>
     </ol>
 </body>
 
